# Nova

./: .gitignore  CMakeLists.txt  Chunks.cpp  Chunks.d  Chunks.emsc.d  Chunks.hpp  Components.cpp  Components.hpp  Debug.cpp  Debug.d  Debug.emsc.d  Debug.hpp  ECS.hpp  Entities.cpp  Entities.hpp  Entity.hpp  EntityPrototype.hpp  GUI.cpp  GUI.d  GUI.emsc.d  GUI.hpp  GameState.cpp  GameState.d  GameState.emsc.d  GameState.hpp  GameViewport.cpp  GameViewport.d  GameViewport.emsc.d  GameViewport.hpp  Items.cpp  Items.d  Items.emsc.d  Items.hpp  LICENSE  Log.cpp  Log.d  Log.emsc.d  Log.hpp  Makefile  Metadata.cpp  (+40 more)
ComponentMetadata/: _componentIDs.hpp  component.hpp  componentDecl.hpp  components-list.txt  getID.hpp  macro.hpp  parse  parse.cpp  short-macro.hpp
ECS/: ComponentPool.hpp  Components.d  ECS.cpp  ECS.d  ECS.emsc.d  ECS.hpp  Entities.d  Entity.cpp  Entity.d  Entity.emsc.d  Entity.hpp  EntityManager.cpp  EntityManager.d  EntityManager.emsc.d  EntityManager.hpp  EntitySystem.d  EntitySystem.emsc.d  EntitySystem.hpp  EntitySystemInterface.cpp  EntitySystemInterface.d  EntitySystemInterface.emsc.d  EntitySystemInterface.hpp  EntityType.cpp  EntityType.d  EntityType.emsc.d  EntityType.hpp  NewECS.hpp  Query.hpp  SystemsConstants.hpp  defaultComponents.hpp
Entities/: Component.hpp  ComponentPool.hpp  Components.hpp  ECS.cpp  ECS.d  ECS.hpp  Entities.cpp  Entities.d  Entities.emsc.d  Entities.hpp  Entity.cpp  Entity.d  Entity.hpp  EntityManager.cpp  EntityManager.d  EntityManager.hpp  EntitySystem.cpp  EntitySystem.d  EntitySystem.hpp  EntitySystemInterface.cpp  EntitySystemInterface.d  EntitySystemInterface.hpp  EntityType.d  EntityType.hpp  Methods.cpp  Methods.d  Methods.hpp  SpecialEntity.d  SystemsConstants.hpp  old.txt
Entities/Systems/: Rendering.hpp  Systems.hpp
EntityComponents/: Components.cpp  Components.d  Components.emsc.d  Components.hpp
EntitySystems/: Rendering.hpp  Systems.hpp
GameSave/: main.cpp  main.d  main.hpp
Rendering/: Drawing.cpp  Drawing.d  Drawing.emsc.d  Drawing.hpp  rendering.hpp
Rendering/shaders/: tile.fs
SDL2_gfx/: Makefile
SDL_FontCache/: Makefile  SDL_FontCache.c  SDL_FontCache.h
SECS/: ECS.cpp  ECS.d  ECS.hpp  Entity.hpp  EntityWorld.hpp
assets/tiles/: tile-info.json
benchmarks/: CMakeLists.txt
benchmarks/ECS/: create-entity.cpp  ecs-benchmark.cpp
benchmarks/include/: bench.hpp
experiments/: lang.txt
include/: Camera.hpp  Chunks.hpp  Game.hpp  GameState.hpp  Items.hpp  Player.hpp  PlayerControls.hpp  Tiles.hpp  actions.hpp  commands.hpp  concurrency.hpp  constants.hpp  gl.hpp  global.hpp  memory.hpp  sdl.hpp  threads.hpp
include/ADT/: ArrayRef.hpp  SmallVector.hpp  TinyPtrVectorPod.hpp  TinyStr.hpp  TinyValVector.hpp  ValPtrUnion.hpp  VecTuple.hpp
include/ComponentMetadata/: components-list.txt  getID.hpp  macro.hpp  parse  parse.cpp
include/ECS/: ArchetypalComponentManager.hpp  ArchetypePool.hpp  CommandBuffer.hpp  CommandOutput.hpp  ComponentInfo.hpp  ComponentPool.hpp  ECS.hpp  Entity.hpp  EntityManager.hpp  EntityPrototype.hpp  EntitySystem.hpp  EntityWorld.hpp  Job.hpp  JobMacros.hpp  NewSystem.hpp  Prototype.hpp  PrototypeManager.hpp  Query.hpp  SECS.hpp  SEntity.hpp  Signature.hpp  System.hpp  TriggerSystem.hpp  componentMacros.hpp  secsy.hpp  system.hpp
include/GUI/: Gui.hpp  components.hpp  ecs-gui.hpp  elements.hpp  prototypes.hpp  test.hpp  update.hpp
include/GameSave/: GameSave.hpp  main.hpp
include/My/: Allocation.hpp  Array.hpp  Bitset.hpp  BucketArray.hpp  Exp.hpp  HashMap.hpp  Iteration.hpp  MyInternals.hpp  SmallVectorWithAllocator.hpp  SmallVectorWithAllocatorCpp.hpp  SparseSets.hpp  String.hpp  ValPtrUnion.hpp  Vec.hpp  VecTuple.hpp  VecWithAllocator.hpp  std.hpp
include/experimental/: IndexAllocator.hpp  TwoSidedVector.hpp  experiments.hpp
include/items/: ComponentManager.hpp  Inventory.hpp  Item.hpp  Prototype.hpp  __redo.hpp  components.hpp  generic.hpp  items.hpp  manager.hpp  methods.hpp  redo.hpp
include/llvm/: Alignment.h  Allocator.h  AllocatorBase.h  ArrayRef.h  BitVector.h  Casting.h  Compiler.h  MathExtras.h  MemAlloc.h  PointerIntPair.h  PointerLikeTypeTraits.h  PointerUnion.h  STLExtras.h  SmallVector.h  TinyPtrVector.h  bit.h  compiler.h  iterator_range.h  type_traits.h
include/memory/: Allocator.hpp  ArenaAllocator.hpp  BlockAllocator.hpp  FreelistAllocator.hpp  GlobalAllocators.hpp  ScratchAllocator.hpp  StackAllocate.hpp  allocators.hpp  memory.hpp
include/metadata/: generator  generator.cpp
include/physics/: physics.hpp
include/rendering/: Drawing.hpp  Shader.hpp  TexturePacker.hpp  context.hpp  drawing.hpp  gui.hpp  renderers.hpp  rendering.hpp  shaders.hpp  text.hpp  textures.hpp  textures.json  utils.hpp
include/utils/: Allocator.hpp  Debug.hpp  FileSystem.hpp  GlobalAllocators.hpp  Log.hpp  Metadata.hpp  allocators.hpp  bench.hpp  common-macros.hpp  compiler.hpp  construct.hpp  ints.hpp  map.h  nonnull.hpp  random_random.hpp  systemInfo.hpp  templates.hpp  type_traits.hpp  vectors.hpp  vectors_and_rects.hpp  visit_struct.h  visit_struct_intrusive.h
llvm/: SmallVector.cpp
macos/: Info.plist  favicon.icns  make-app.sh
old_vscode/: c_cpp_properties.json  settings.json
save/: chunks  entities  log.txt  player
src/: Camera.hpp  Chunks.cpp  Chunks.hpp  Debug.cpp  EntityPrototype.hpp  FileSystem.cpp  FileSystem.hpp  GUI.cpp  GUI.hpp  Game.cpp  Game.hpp  GameState.cpp  GameState.hpp  Items.cpp  Items.hpp  Log.cpp  Log.hpp  Metadata.hpp  Player.hpp  PlayerControls.cpp  PlayerControls.hpp  Testing.txt  Textures.cpp  Textures.hpp  Tiles.cpp  Tiles.hpp  actions.cpp  commands.cpp  constants.hpp  debugAllocEnd.hpp  debugAllocStart.hpp  gl.h  gl.hpp  global.cpp  global.h  global.hpp  loadData.hpp  main.cpp  mainmain.cpp  memory.cpp  (+9 more)
testing/: CMakeLists.txt
testing/src/: TexturePacker.cpp  TexturePacker.hpp  main.cpp
tests/: CMakeLists.txt
tests/src/: Player.cpp
tests/src/ecs/: ArchetypePool.cpp  ComponentManager.cpp  components.cpp
tests/src/items/: Inventory.cpp
tests/src/memory/allocators/: all.cpp
tests/src/world/: functions.cpp
(+186 files in other folders)
